...
                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OlR-Me-Fbl" id="Srt-WJ-PUo">
                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Set rotation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fhc-cv-ebT">
                                            <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" name="AccentColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                                <rect key="frame" x="0.0" y="93.666667938232422" width="393" height="43.666667938232422"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zsb-2L-1s0" id="i8x-TR-28h">
                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Add weekdays" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UmW-8u-efR">
                                            <rect key="frame" x="59" y="0.0" width="314" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" name="AccentColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                                <rect key="frame" x="0.0" y="137.33333587646484" width="393" height="43.666667938232422"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Xwi-cR-JIm" id="3jl-ts-ES5">
                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Add alarm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P0i-z5-ERH">
                                            <rect key="frame" x="59" y="0.0" width="314" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" name="AccentColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
